# advent_of_code

./: .gitignore  Cargo.toml  README.md  pubspec.yaml  rustfmt.toml
lib/2015/1/: a.dart  b.dart
lib/2015/10/: a.dart  b.dart
lib/2015/11/: a.dart  b.dart  utils.dart
lib/2015/12/: a.dart  b.dart
lib/2015/13/: a.dart  b.dart  utils.dart
lib/2015/14/: a.dart  b.dart  utils.dart
lib/2015/15/: a.dart  b.dart  utils.dart
lib/2015/16/: a.dart  b.dart
lib/2015/2/: a.dart  b.dart
lib/2015/3/: a.dart  b.dart
lib/2015/4/: a.dart  b.dart
lib/2015/5/: a.dart  b.dart
lib/2015/6/: a.dart  b.dart
lib/2015/7/: a.dart  b.dart
lib/2015/8/: a.dart  b.dart
lib/2015/9/: a.dart  b.dart  utils.dart
lib/Utils/: point.dart
lib/utils/: funcs.dart  int_2d.dart  iterable_ext.dart  list_ext.dart  list_of_int_ext.dart  list_of_list_ext.dart  ref.dart  string_ext.dart
solutions/: shared.dart
solutions/2025/day01/: part1.dart  part2.dart
solutions/2025/day02/: part1.dart  part2.dart
solutions/2025/day03/: part1.dart  part2.dart
solutions/2025/day04/: part1.dart  part2.dart  shared.dart
solutions/2025/day05/: part1.dart  part2.dart
